--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-standard": "^4.0.0",
     "expose-loader": "^0.7.3",
+    "file-loader": "^4.1.0",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0"
   },
